# ChangeLog for www-client/surfraw
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Autotools files are no longer in VCS, so we need to generate them.

  14 Jan 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Dropped keywords in live ebuild.

  20 Nov 2009; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Added notification for config file moves.

*surfraw-9999 (14 Oct 2009)

  14 Oct 2009; James Rowe <jnrowe@gmail.com>
  +files/surfraw-9999-gentoo_pkg_tools.patch, +surfraw-9999.ebuild,
  +metadata.xml:
  Added live ebuild from git sources.
