@@ -2,13 +2,13 @@
 Hash: SHA1
 
 AUX surfraw-9999-gentoo_pkg_tools.patch 1128 RMD160 e801d527f756ab00c28d02f4ffa2224f57d8adbd SHA1 34c9ee51940baecede9a0f87b6a6b16299ccd23e SHA256 b79ea151bdcad358ea83a27d04aa1b80e7d4279906ef7fc227f32eed1b349fbb
-EBUILD surfraw-9999.ebuild 2591 RMD160 28e33c2eb3913451d0202de4dcfd0a9a1b96e241 SHA1 be8bd08fb0480276eeb54f4c70dab6d723ebb4f4 SHA256 1e07ca7bbaaa36a10853368eb1f16d53472dd8582c58dc752d4103f992e17632
-MISC ChangeLog 666 RMD160 adf7a577875c4649df6e5eaa00838b5a54d08123 SHA1 346f5592dd7ccef61bb6ec74f08ddd9a1f49b9a2 SHA256 ed756962f157a1fd282f0a530058be95dee2f3f4e32ac9501515e6705ba7511e
+EBUILD surfraw-9999.ebuild 2528 RMD160 629a47ff3be68d94ecbac636d67c1628014cd595 SHA1 59bc1cbb5107ab261791f4706510413a9245bc91 SHA256 4c2958e7f5df718d9b8b324c679cc2ef12077a89ab06bd1725cb7dcbfb9e5dee
+MISC ChangeLog 779 RMD160 1b2bd57139447309cf48a3d237635c3f3b084f45 SHA1 5f7323190fbe34895886d70d365d6f624e0ec2c6 SHA256 5f68c667c81cb005b5edfdaf75af74042171fa4578e7e3e8e3bea0607c7ab9c2
 MISC metadata.xml 1443 RMD160 2e0175dba32af3bbb95ae29643d9a52bce61f724 SHA1 fd90b230e1b1340836bd87756f59b8712b0c01c7 SHA256 553e178032c3ed0df38c973c55d5a19c38d3e2a378f02803cebf97b5419190c9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwQSvQACgkQzJrj3cAXR0l+nQCfYATwucPlggVzx1BlHadmnyRL
-KhcAn0aIVmQiPj5Mh7sodW/szpJxKxCI
-=ZUrg
+iEYEARECAAYFAkwQV18ACgkQzJrj3cAXR0k2UACePfN2kesI/vJphP3otfBlfMQz
+ctgAoKKtzZ+AT5jftTzBUV84vkDLEv95
+=Ii6V
 -----END PGP SIGNATURE-----
