@@ -3,6 +3,9 @@
 # $Header: $
 
   10 Jun 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
+  Switched to using base.eclass' src_install.
+
+  10 Jun 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
   Autotools files are no longer in VCS, so we need to generate them.
 
   14 Jan 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
